Improved design but still having issues when the lists on the overview page are too long.

--- a/app/react/components/OrganizationOverview/index.css
+++ b/app/react/components/OrganizationOverview/index.css
@@ -2,29 +2,27 @@
   height: 100%;
 }
 
-.left-panel {
-  height: 100%;
-}
-
-.center-panel {
-  padding: 0px;
+.header-container {
+  padding: 10px;
+  margin-top: 5px;
   position: relative;
-  height: 100%;
-}
+  height: 45px;
+  background-color: #004346;
 
-.right-panel {
-  padding: 0px;
-  position: relative;
-  height: 100%;
-}
-
-.swipe-container {
-  width: 100%;
-  height: 100%;
+  -webkit-box-shadow: 0px 0px 5px 0px rgba(0,0,0,0.75);
+  -moz-box-shadow: 0px 0px 5px 0px rgba(0,0,0,0.75);
+  box-shadow: 0px 0px 5px 0px rgba(0,0,0,0.75);
 }
 
 .header {
-  padding: 10px;
-  position: relative;
-  height: 45px;
+  margin: 5px;
+  font-weight: bold;
+}
+
+.action {
+  display: none;
+}
+
+.header-container:hover .action {
+  display: inline;
 }
